--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "n8n-nodes-llmlayer",
-  "version": "1.0.1",
-  "description": "n8n node for LLMLayer Search & Answer API",
-  "main": "index.js",
+  "version": "1.0.2",
+  "description": "n8n node for LLMLayer Web Search & Answer API",
+  "main": "dist/index.js",
   "keywords": [
     "n8n",
     "n8n-community-node-package",
@@ -10,7 +10,10 @@
     "llmlayer",
     "ai",
     "search",
-    "web-search"
+    "web-search",
+    "scrape",
+    "youtube-transcript",
+    "web-answer"
   ],
   "author": {
     "name": "Yassine Khazzan",
@@ -59,6 +62,6 @@
     "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "n8n-workflow": "~1.68.0"
+    "n8n-workflow": "1.x"
   }
 }
